--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ default-run = "main"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+colored = "2.0"
 rand = "0.8.5"
