--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ default-run = "main"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4"
+chrono-tz = "0.5"
 colored = "2.0"
 rand = "0.8.5"
